tests/error/impl_unknown_func/main.adept3

pragma => adept("3.0")

#[foreign]
func printf(format ptr<char>, ...) int

func main {
    speakInt::speak(10)
}

trait Speak<$T> {
    func speak(self $T) void
}

#[public]
impl Speak<int> speakInt {
    func speak(self int) {
        printf(c"int = %d\n", self)
    }

    func speak2(self int) {
        printf(c"int = %d\n", self)
    }
}

